<resources>
    <string name="app_name">Chess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="whitePlayersTime">White Players Time: %d s</string>
    <string name="blackPlayersTime">Black Players Time: %d s</string>
    <string name="whitePlayersTurn">It\'s White Player\'s turn</string>
    <string name="blackPlayersTurn">It\'s Black Player\'s turn</string>
    <string name="choose_mode">Choose mode</string>
    <string name="PvP">Player vs Player</string>
    <string name="PvAI">Player vs AI</string>
    <string name="AIvAI">AI vs AI</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chess">Chess</string>
    <string name="start_new_game">Start New Game</string>
    <string name="load_previous_game">Load Previous Game</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="load_game">Load Game</string>
    <string name="default_textures">Default Textures</string>
    <string name="alternate_textures">Alternate Textures</string>
</resources>